fix: update /logout route to /SASLogon/logout
